--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img>
    <a class="th" href="https://www.instagram.com/7hgaspar/" style="text-decoration: none;" target="_blank">
      <img src="Perfil.png "> 
-</a>Meu perfil</h1> 
+</a>Meu perfilll</h1> 
 
 <img class="IB"
 src="barrademenu.png"> 
