--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ class="P100">
 <span>
      <a
       href="MeusDados.html" target="_blank" 
-    style="text-decoration: none;"> Meus Dados</h2>
+    style="text-decoration: none;"> Meus Dades</h2>
  </span>
     </a>
 
